--- a/index.html
+++ b/index.html
@@ -8,5 +8,16 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="LION KING">
+
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" 
+    alt="LION KING"
+    title="King of the jungle himself!">
+
+    <img src="../images/my_company_logo.png" alt="my company name" title="We're here to help you!" />
+
+
   </body>
 </html>
